done with product page

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/garden.jpeg"></div>
                               <h3 class="types_text">LED GARDEN LAMP</h3>
-                              <div class="read_bt"><a href="./products.html">Check it</a></div>
+                              <div class="read_bt"><a href="./products/garden.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/fan.jpeg"></div>
