--- a/products.html
+++ b/products.html
@@ -340,7 +340,7 @@
             <h3>STRIP LIGHTS</h3>
          </div>
           <div class="product">
-            <a href="./single-product.html">
+            <a href="./products/garden.html">
               <img src="./assets/img/display/garden.jpeg" alt="GARDEN LIGHTS" />
             </a>
             <h3>GARDEN LIGHTS</h3>
