--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Filament Bulbs</title>
+      <title>Neelux | Tube Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sectory">
+      <div class="header_sectorum">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -64,6 +64,7 @@
                      <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
                      <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
                      <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
+                     <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
                    </div>
                  </li>
@@ -98,13 +99,13 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/filament/header/f2.jpeg"></div>
+                              <div class="banner_img"><img src="img/tubes/header/1.png"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: rgb(33, 250, 0);">FILAMENT BULB </h1>
-                                 <h5 class="tasty_text" style="color: rgb(0, 191, 255);">ROUND DESIGNS</h5>
-                                 <p class="banner_text" style="color: rgb(0, 191, 255);">ALL WATTS</p>
+                                 <h1 class="banner_taital" style="color:  rgb(242, 4, 4);">LED TUBE FITTING </h1>
+                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">4FT</h5>
+                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">DURABLE</p>
                               </div>
                            </div>
                         </div>
@@ -112,13 +113,14 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/filament/header/2.jpg"></div>
+                              <div class="banner_img"><img src="img/tubes/header/2.png"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: rgb(33, 250, 0);">FILAMENT BULB</h1>
-                                 <h5 class="tasty_text" style="color: rgb(0, 191, 255);">ENERGY EFFICIENT</h5>
-                                 <p class="banner_text" style="color: rgb(0, 191, 255);">SCREW</p>
+                                 <h1 class="banner_taital" style="color: rgb(242, 4, 4);">LED TUBE FITTING</h1>
+                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">T8/T5(2FT AND 4FT)</h5>
+                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">WATER PROOF</p>
+                                 
                               </div>
                            </div>
                         </div>
@@ -127,13 +129,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/filament/header/3.jpg"></div>
+                              <div class="banner_img"><img src="img/tubes/header/h-bg.png"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital" style="color: rgb(33, 250, 0);">FILAMENT BULB</h1>
-                              <h5 class="tasty_text" style="color: rgb(0, 191, 255);">ROUND</h5>
-                              <p class="banner_text" style="color: rgb(0, 191, 255);">LONG LASTING</p>
+                              <h1 class="banner_taital" style="color:  rgb(242, 4, 4);">LED TUBE LIGHTS</h1>
+                              <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">T8</h5>
+                              <p class="banner_text" style="color:  rgb(242, 4, 4);">ALL COLORS</p>
                            </div>
                               </div>
                            </div>
@@ -167,25 +169,25 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/1.jpg"></div>
-                              <h3 class="types_text">4W CANDLE BULB </h3>
+                              <div class="coffee_img"><img src="img/tubes/1.jpg"></div>
+                              <h3 class="types_text">LED TUBE </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/cand.jpg"></div>
-                              <h3 class="types_text">4W CANDLE</h3>
+                              <div class="coffee_img"><img src="img/tubes/2.jpeg"></div>
+                              <h3 class="types_text">LED TUBE</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/filament (2).jpg"></div>
-                              <h3 class="types_text">6W ROUND BULB</h3>
+                              <div class="coffee_img"><img src="img/tubes/2ft.png"></div>
+                              <h3 class="types_text">T8 TUBE</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/filament/normal.jpg"></div>
-                              <h3 class="types_text">4W BULB</h3>
+                              <div class="coffee_img"><img src="img/tubes/3.jpg"></div>
+                              <h3 class="types_text">LED TUBE</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <div class="carousel-item">
+                  <!-- <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
@@ -206,14 +208,71 @@
                            </div>
                         </div>
                      </div>
-                  </div>
+                  </div> -->
                </div>
-               <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+               <!-- <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
                </a>
                <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
                <i class="fa fa-arrow-right"></i>
+               </a> -->
+            </div>
+         </div>
+         <br>
+         <div class="coffee_section_2">
+            <div id="main_slider" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner">
+                  <div class="carousel-item active">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/4.jpg"></div>
+                              <h3 class="types_text">LED DIFFUSSER </h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/glass.jpeg"></div>
+                              <h3 class="types_text">LED GLASS TUBE</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/short-rechargeable.jpg"></div>
+                              <h3 class="types_text">LED RECHARGEABLE TUBE</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/tube-holder.jpg"></div>
+                              <h3 class="types_text">LED TUBE HOLDER</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <!-- <div class="carousel-item">
+                     <div class="container-fluid">
+                        <div class="row">
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/led-tube.jpeg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/led tube2.jpeg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/tt1.png"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
+                           </div>
+                           <div class="col-lg-3 col-md-6">
+                              <div class="coffee_img"><img src="img/tubes/tube7.jpeg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div> -->
+               <!-- <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
+               <i class="fa fa-arrow-left"></i>
                </a>
+               <a class="carousel-control-next" href="#main_slider" role="button" data-slide="next">
+               <i class="fa fa-arrow-right"></i>
+               </a> -->
             </div>
          </div>
       </div>
