worked on tracklight page

--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Tube Lights</title>
+      <title>Neelux | Track Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sectorum">
+      <div class="header_track">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -66,6 +66,7 @@
                      <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
                      <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
+                     <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
                    </div>
                  </li>
                  <li class="nav-item">
@@ -99,12 +100,12 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/tubes/header/1.png"></div>
+                              <div class="banner_img"><img src="img/tracks/header/1.png"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color:  rgb(242, 4, 4);">LED TUBE FITTING </h1>
-                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">4FT</h5>
+                                 <h1 class="banner_taital" style="color:  rgb(4, 4, 242);">LED TRACK LIGHT</h1>
+                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">BLACK LONG</h5>
                                  <p class="banner_text" style="color:  rgb(242, 4, 4);">DURABLE</p>
                               </div>
                            </div>
@@ -113,13 +114,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/tubes/header/2.png"></div>
+                              <div class="banner_img"><img src="img/tracks/header/2.png"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: rgb(242, 4, 4);">LED TUBE FITTING</h1>
-                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">T8/T5(2FT AND 4FT)</h5>
-                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">WATER PROOF</p>
+                                 <h1 class="banner_taital" style="color: rgb(4, 4, 242);">LED TRACK LIGHT</h1>
+                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">WHITE LONG</h5>
+                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">ELEGANT</p>
                                  
                               </div>
                            </div>
@@ -129,13 +130,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/tubes/header/h-bg.png"></div>
+                              <div class="banner_img"><img src="img/tracks/header/3.png"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital" style="color:  rgb(242, 4, 4);">LED TUBE LIGHTS</h1>
-                              <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">T8</h5>
-                              <p class="banner_text" style="color:  rgb(242, 4, 4);">ALL COLORS</p>
+                              <h1 class="banner_taital" style="color:  rgb(4, 4, 242);">LED TRACK LIGHT</h1>
+                              <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">WHITE SHORT</h5>
+                              <p class="banner_text" style="color:  rgb(242, 4, 4);">WARM WHITE</p>
                            </div>
                               </div>
                            </div>
@@ -169,20 +170,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/1.jpg"></div>
-                              <h3 class="types_text">LED TUBE </h3>
+                              <div class="coffee_img"><img src="img/tracks/1.jpg"></div>
+                              <h3 class="types_text">27-3000 / 29-3010 </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/2.jpeg"></div>
-                              <h3 class="types_text">LED TUBE</h3>
+                              <div class="coffee_img"><img src="img/tracks/2.jpg"></div>
+                              <h3 class="types_text">29-3000 / 29-3010</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/2ft.png"></div>
-                              <h3 class="types_text">T8 TUBE</h3>
+                              <div class="coffee_img"><img src="img/tracks/3.jpg"></div>
+                              <h3 class="types_text">26-3000 / 26-3010</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/3.jpg"></div>
-                              <h3 class="types_text">LED TUBE</h3>
+                              <div class="coffee_img"><img src="img/tracks/4.jpg"></div>
+                              <h3 class="types_text">25-3000 / 25-3010</h3>
                            </div>
                         </div>
                      </div>
@@ -226,20 +227,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/4.jpg"></div>
-                              <h3 class="types_text">LED DIFFUSSER </h3>
+                              <div class="coffee_img"><img src="img/tracks/t1.jpeg"></div>
+                              <h3 class="types_text">LED TRACK LIGHT </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/glass.jpeg"></div>
-                              <h3 class="types_text">LED GLASS TUBE</h3>
+                              <div class="coffee_img"><img src="img/tracks/WhatsApp Image 2023-07-03 at 4.08.3 PM.jpeg"></div>
+                              <h3 class="types_text">LED TRACK SHORT</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/short-rechargeable.jpg"></div>
-                              <h3 class="types_text">LED RECHARGEABLE TUBE</h3>
+                              <div class="coffee_img"><img src="img/tracks/t3.jpeg"></div>
+                              <h3 class="types_text">LED TRACK LIGHT</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tubes/tube-holder.jpg"></div>
-                              <h3 class="types_text">LED TUBE HOLDER</h3>
+                              <div class="coffee_img"><img src="img/tracks/WhatsApp Image 2023-07-03 at 4.08.30 PM.jpeg"></div>
+                              <h3 class="types_text">LED TRACK LIGHT</h3>
                            </div>
                         </div>
                      </div>
