--- a/products/tubes.html
+++ b/products/tubes.html
@@ -66,6 +66,7 @@
                      <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
                      <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
+                     <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
                    </div>
                  </li>
                  <li class="nav-item">
