added streetlights page and made some ammend ments

--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
           </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
               <a class="dropdown-item" href="../products.html">ALL PRODUCTS</a>
               <a class="dropdown-item" href="../products/strip.html">STRIP LIGHTS</a>
               <a class="dropdown-item" href="../products/flood.html">FLOOD LIGHTS</a>
@@ -184,7 +184,9 @@
               <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
               <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
               <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
+              <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
               <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
+              <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
             </div>
           </li>
           <li class="nav-item">
