--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Track Lights</title>
+      <title>Neelux | Street Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_track">
+      <div class="header_street">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -100,13 +100,13 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/tracks/header/1.png"></div>
+                              <div class="banner_img"><img src="img/street/header/st1.jpeg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color:  rgb(4, 4, 242);">LED TRACK LIGHT</h1>
-                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">BLACK LONG</h5>
-                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">DURABLE</p>
+                                 <h1 class="banner_taital" style="color:  rgb(4, 4, 242);">LED SOLAR STREET LIGHT</h1>
+                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">BLACK</h5>
+                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">200W, 100W, 60W</p>
                               </div>
                            </div>
                         </div>
@@ -114,13 +114,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/tracks/header/2.png"></div>
+                              <div class="banner_img"><img src="img/street/header/st2.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: rgb(4, 4, 242);">LED TRACK LIGHT</h1>
-                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">WHITE LONG</h5>
-                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">ELEGANT</p>
+                                 <h1 class="banner_taital" style="color: rgb(4, 4, 242);">LED SOLAR STREET LIGHT</h1>
+                                 <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">GREY</h5>
+                                 <p class="banner_text" style="color:  rgb(242, 4, 4);">50W, 100W, 150W, 2OOW</p>
                                  
                               </div>
                            </div>
@@ -130,13 +130,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/tracks/header/3.png"></div>
+                              <div class="banner_img"><img src="img/street/header/st3.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital" style="color:  rgb(4, 4, 242);">LED TRACK LIGHT</h1>
-                              <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">WHITE SHORT</h5>
-                              <p class="banner_text" style="color:  rgb(242, 4, 4);">WARM WHITE</p>
+                              <h1 class="banner_taital" style="color:  rgb(4, 4, 242);">LED SOLAR STREET LIGHT</h1>
+                              <h5 class="tasty_text" style="color:  rgb(242, 4, 4);">SEPARATE PANEL</h5>
+                              <p class="banner_text" style="color:  rgb(242, 4, 4);">LONG LASTING</p>
                            </div>
                               </div>
                            </div>
@@ -170,20 +170,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/1.jpg"></div>
-                              <h3 class="types_text">27-3000 / 29-3010 </h3>
+                              <div class="coffee_img"><img src="img/street/ST86.png"></div>
+                              <h3 class="types_text">LED STREET LIGHTS </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/2.jpg"></div>
-                              <h3 class="types_text">29-3000 / 29-3010</h3>
+                              <div class="coffee_img"><img src="img/street/solar street grey.jpeg"></div>
+                              <h3 class="types_text">LED STREET LIGHTS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/3.jpg"></div>
-                              <h3 class="types_text">26-3000 / 26-3010</h3>
+                              <div class="coffee_img"><img src="img/street/solar streetlight.jpeg"></div>
+                              <h3 class="types_text">LED STREET LIGHTS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/tracks/4.jpg"></div>
-                              <h3 class="types_text">25-3000 / 25-3010</h3>
+                              <div class="coffee_img"><img src="img/street/solr street black.jpeg"></div>
+                              <h3 class="types_text">LED STREET LIGHTS</h3>
                            </div>
                         </div>
                      </div>
@@ -221,7 +221,7 @@
          </div>
          <br>
          <div class="coffee_section_2">
-            <div id="main_slider" class="carousel slide" data-ride="carousel">
+            <!-- <div id="main_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                   <div class="carousel-item active">
                      <div class="container-fluid">
@@ -244,7 +244,7 @@
                            </div>
                         </div>
                      </div>
-                  </div>
+                  </div> -->
                   <!-- <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
