--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                      <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
                      <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
                      <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
+                     <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
+                     <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
                    </div>
                  </li>
                  <li class="nav-item">
