--- a/products/wall.html
+++ b/products/wall.html
@@ -64,7 +64,10 @@
                      <a class="dropdown-item" href="../products/table.html">TABLE LAMPS</a>
                      <a class="dropdown-item" href="../products/ceilin.html">CEILING LIGHTS</a>
                      <a class="dropdown-item" href="../products/panels.html">PANEL LAMPS</a>
+                     <a class="dropdown-item" href="../products/garden.html">GARDEN LAMPS</a>
                      <a class="dropdown-item" href="../products/accessories.html">LED ACCESSORIES</a>
+                     <a class="dropdown-item" href="../products/tubes.html">LED TUBES</a>
+                   </div>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="../about.html">About</a>
