working on garden lamps page

--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Street Lights</title>
+      <title>Neelux | Garden Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_street">
+      <div class="header_garden">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -100,7 +100,7 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/street/header/st1.jpeg"></div>
+                              <div class="banner_img"><img src="img/garden/header/4.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -114,7 +114,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/street/header/st2.jpg"></div>
+                              <div class="banner_img"><img src="img/garden/header/8.jpeg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
@@ -130,7 +130,7 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/street/header/st3.jpg"></div>
+                              <div class="banner_img"><img src="img/garden/header/g6.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
